🔧 fix: 성능 이득을 위해 font-display swap에서 optional로 변경

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,7 +4,7 @@
   font-family: "Pretendard Variable";
   font-weight: 45 920;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/PretendardVariable.woff2") format("woff2-variations");
 }
 
