--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -8,7 +8,7 @@
   font-weight: 45 920;
   font-style: normal;
   font-display: optional;
-  src: url("/fonts/PretendardVariable.woff2") format("woff2-variations");
+  src: url("../fonts/PretendardVariable.woff2") format("woff2-variations");
 }
 
 @theme {
