--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,13 +1,11 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:is(.dark *));
-
 @font-face {
-  font-family: "Pretendard Variable";
+  font-family: "Pretendard JP Variable";
   font-weight: 45 920;
   font-style: normal;
   font-display: optional;
-  src: url("../fonts/PretendardVariable.woff2") format("woff2-variations");
+  src: url("../fonts/PretendardJPVariable.woff2") format("woff2-variations");
 }
 
 @theme {
@@ -23,10 +21,8 @@
   --color-white: #fefefe;
   --color-gray: #a1a8b0;
 
-  --font-pretendard:
-    "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto,
-    "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic",
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  --font-pretendard-jp:
+    "Pretendard JP Variable", "Pretendard JP", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Hiragino Sans", "Apple SD Gothic Neo", Meiryo, "Noto Sans JP", "Noto Sans KR", "Malgun Gothic", Osaka, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
 @layer utilities {
