--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,12 +1,6 @@
 @import "tailwindcss";
 
-@font-face {
-  font-family: "Pretendard JP Variable";
-  font-weight: 45 920;
-  font-style: normal;
-  font-display: optional;
-  src: url("../fonts/PretendardJPVariable.woff2") format("woff2-variations");
-}
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-jp-dynamic-subset.min.css");
 
 @theme {
   --color-blue: #00d4ff;
